style: fix layout issues

--- a/plugin/scss/default-buttons.scss
+++ b/plugin/scss/default-buttons.scss
@@ -182,6 +182,7 @@
     position: relative;
     font-size: 12px;
     font-weight: 500;
+    height: 70px !important;
     background-color: map-get($white, 1);
     outline: 2px solid transparent;
     outline-offset: -2px;
